--- a/sections/customefooter.liquid
+++ b/sections/customefooter.liquid
@@ -8,7 +8,7 @@
           <div class="col-md-6">
               <div class="footer-logo-area">
                 <div class="footer-logo">
-                  <img src="{{section.settings.img1 | img_url: '' }}" alt="">
+                  <img src="{{section.settings.img | img_url: '' }}" alt="">
                 </div>
                 <div class="footer-socail">
                   <ul>
