--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -76,6 +76,11 @@
     </script>
   
     <link rel="stylesheet" href="{{ 'theme.css' | asset_url }}" type="text/css" media="print" onload="this.media='all';onLoadStylesheet()">
+    <link rel="stylesheet" href="{{ 'jquery.mCustomScrollbar.min.css' | asset_url }}" type="text/css">
+    <link rel="stylesheet" href="{{ 'allextra.css' | asset_url }}" type="text/css" media="print" onload="this.media='all';onLoadStylesheet()">
+    <link rel="stylesheet" href="{{ 'allextra.css' | asset_url }}" type="text/css" media="print" onload="this.media='all';onLoadStylesheet()">
+    <link rel="stylesheet" href="{{ 'style.css' | asset_url }}" type="text/css" media="print" onload="this.media='all';onLoadStylesheet()">
+  
   
     <style>
       {{ header_font | font_face: font_display: 'swap' }}
@@ -193,9 +198,7 @@
     {{ content_for_header }}
 
 
-    <link rel="stylesheet" href="{{ 'allextra.css' | asset_url }}" type="text/css" media="print" onload="this.media='all';onLoadStylesheet()">
-    <link rel="stylesheet" href="{{ 'style.css' | asset_url }}" type="text/css" media="print" onload="this.media='all';onLoadStylesheet()">
-  
+
   </head>
   
   <body class="template-{{ request.page_type | handle }}">
@@ -235,11 +238,12 @@
       <li id="a11y-refresh-page-message">{{ 'general.accessibility.refresh_page' | t }}</li>
       <li id="a11y-selection-message">{{ 'general.accessibility.selection_help' | t }}</li>
     </ul>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
+
+    <script src="{{ 'jquery-3.5.1.slim.min.js' | asset_url }}" defer="defer"></script>
+    <script src="{{ 'bootstrap.bundle.min.js' | asset_url }}" defer="defer"></script>
+    <script src="{{ 'jquery.mCustomScrollbar.concat.min.js' | asset_url }}" defer="defer"></script>
     <!-- jQuery Custom Scroller CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script> 
     <script src="{{ 'splide.js' | asset_url }}"></script> 
     <script src="{{ 'main.js' | asset_url }}"></script> 
   </body>
