--- a/sections/customeheader.liquid
+++ b/sections/customeheader.liquid
@@ -151,7 +151,7 @@
       </div>
     </div>
   </header> {% endcomment %}
-  {% include 'customeoffsetmenu' %}
+  {% comment %} {% include 'customeoffsetmenu' %} {% endcomment %}
 {% schema %}
     {
         "name": "Header",
