--- a/sections/customeheader.liquid
+++ b/sections/customeheader.liquid
@@ -1,6 +1,5 @@
-{% comment %} loging liquid emd  {% endcomment %}
 
-{% comment %} <header>
+<header>
     <div class="header-top-wrapper d-flex align-items-center">
         <div id="splide" class="splide">
             <div class="splide__track">
@@ -150,8 +149,8 @@
         </div>
       </div>
     </div>
-  </header> {% endcomment %}
-  {% comment %} {% include 'customeoffsetmenu' %} {% endcomment %}
+  </header>
+  {% include 'customeoffsetmenu' %}
 {% schema %}
     {
         "name": "Header",
