--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -21,19 +21,16 @@
   
 
 
- 
-
-    <link rel="stylesheet" href="{{ 'bootstrap.min.css' | asset_url }}" >
-    <link rel="stylesheet" href="{{ 'jquery.mCustomScrollbar.min.css' | asset_url }}" >
-    <link rel="stylesheet" href="{{ 'splide.min.css' | asset_url }}" >
-
-
     <link rel="preload" href="{{ 'theme.css' | asset_url }}" as="style">
+    <link rel="stylesheet" href="{{ 'bootstrap.min.css' | asset_url }}" >
+    <link rel="stylesheet" href="{{ 'splide.min.css' | asset_url }}" >
+    <link rel="stylesheet" href="{{ 'allextra.css' | asset_url }}" >
+    <link rel="stylesheet" href="{{ 'mCustomScrollbar.min.css' | asset_url }}" >
     <link rel="stylesheet" href="{{ 'style.css' | asset_url }}" >
 
 
 
- 
+
     
     <script src="{{ 'lazysizes.min.js' | asset_url }}" ></script>
     
@@ -246,9 +243,12 @@
       <li id="a11y-refresh-page-message">{{ 'general.accessibility.refresh_page' | t }}</li>
       <li id="a11y-selection-message">{{ 'general.accessibility.selection_help' | t }}</li>
     </ul>
+
+
+    
     <script src="{{ 'jquery-3.5.1.slim.min.js' | asset_url }}" ></script>
     <script src="{{ 'bootstrap.bundle.min.js' | asset_url }}" ></script>
-    <script src="{{ 'jquery.mCustomScrollbar.concat.min.js' | asset_url }}" ></script>
+    <script src="{{ 'mCustomScrollbar.min.js' | asset_url }}" ></script>
     <script src="{{ 'splide.js' | asset_url }}"></script> 
     <script src="{{ 'main.js' | asset_url }}"></script> 
   </body>
