--- a/sections/customeheader.liquid
+++ b/sections/customeheader.liquid
@@ -27,7 +27,7 @@
           <div class="col-8 col-xl-6   col-lg-5   d-flex align-items-center">
 
             <div class="logo ">
-              <a href="#"><img src="{{section.settings.img | img_url:''}}" alt=""></a>
+              <a href="/"><img src="{{section.settings.img | img_url:''}}" alt=""></a>
             </div>
             <div class="search-from d-none d-lg-block">
               <div class="sidebar-box search-form-wrap">
