--- a/sections/customenewarrival.liquid
+++ b/sections/customenewarrival.liquid
@@ -47,7 +47,7 @@
                       <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
                       <use xlink:href="#image0_209_877" transform="translate(0 -0.064752) scale(0.00227273 0.00183361)"/>
                       </pattern>
-                      <image id="image0_209_877"  width="440" height="616" xlink:href="{{ product.featured_image.src | img_url: 'large' }}"/>
+                      <image id="image0_209_877" loading="lazy"  width="440" height="616" xlink:href="{{ product.featured_image.src | img_url: '' }}"/>
                       </defs>
                     </svg>
                     <div class="prudct-shado-svg egg-mobile-respinsive">
