--- a/sections/custometshirt.liquid
+++ b/sections/custometshirt.liquid
@@ -56,7 +56,7 @@
                       <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
                       <use xlink:href="#image0_118_129" transform="translate(0 -0.000505902) scale(0.00147059 0.00105148)"/>
                       </pattern>
-                      <image id="image0_118_129" width="680" height="952" xlink:href=""/>
+                      <image id="image0_118_129" width="680" loading="lazy" height="952" xlink:href="{{ product.featured_image.src | img_url: '' }}"/>
                       </defs>
                       </svg>
                     <div class="prudct-shado-svg t-shirt-mobile ">
