--- a/assets/theme.css
+++ b/assets/theme.css
@@ -1051,6 +1051,8 @@ textarea {
   transition: none; }
 
 /*=============== Critical CSS ===================*/
+.main-content {
+  opacity: 1; }
 
 .main-content .shopify-section {
   display: inherit; }
@@ -1068,8 +1070,12 @@ textarea {
     display: table;
     clear: both; }
 
-
-    
+.main-content {
+  display: block;
+  padding-top: 35px; }
+  @media only screen and (min-width: 750px) {
+    .main-content {
+      padding-top: 55px; } }
 
 .section-header {
   margin-bottom: 35px; }
