--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -211,7 +211,7 @@
       {% render 'cart-popup' %}
     {%- endif -%}
   
-    {% comment %} {% section 'header' %} {% endcomment %}
+{% section 'header' %} 
     {% section 'customeheader' %}
   
     <div class="page-container drawer-page-content" id="PageContainer">
