--- a/sections/customeheader copy.liquid
+++ b/sections/customeheader copy.liquid
@@ -1,4 +1,5 @@
-{% include 'customeoffsetmenu' %}
+  
+  {% include 'customeoffsetmenu' %}
 
 
 
@@ -23,6 +24,7 @@
           </div>
           
     </div>
+   
     <div class="main-header-wrapper d-flex align-items-center ">
       <div class="container">
         <div class="row">
@@ -157,6 +159,14 @@
       </div>
     </div>
   </header>
+  {% render 'search-drawer' %}
+  <div class="site-header__icons-wrapper">
+
+   
+
+  
+  </div>
+
 
 
 
