--- a/snippets/customeoffsetmenu.liquid
+++ b/snippets/customeoffsetmenu.liquid
@@ -12,22 +12,65 @@
     
 
     <ul class="list-unstyled components">
-        <li class="active">
-            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Home</a>
-            <ul class="collapse list-unstyled" id="homeSubmenu">
+        {% assign footer_menu_mobile = section.settings.sub4 %}
+            {% for link in linklists[footer_menu_mobile].links %}
+            
+            {% assign child_list_handle = link.title | handleize %}
+            {% if linklists[child_list_handle].links != blank %}
                 <li>
-                    <a href="#">Home 1</a>
+                    <a href="#{{ link.title | handle}}-{{forloop.index | handle}}" data-toggle="collapse" aria-expanded="false" class="d-flex justify-content-between align-items-center crote"><p>{{link.title}}</p>   <div class="mobile-menu-arrow">{% include 'svgarrow_down' %}</div> </a>
+                    <ul class="collapse list-unstyled" id="{{ link.title | handle}}-{{forloop.index | handle}}">
+                        {% for childlink in linklists[child_list_handle].links %}
+                            {% assign grand_child_link_handle = childlink.title | handleize %}
+                            {% if linklists[grand_child_link_handle] and linklists[grand_child_link_handle].links.size > 0 %}
+                        {% comment %} child with submenu  {% endcomment %}
+                        <li>
+                           
+                           
+                            <a href="#{{ childlink.title | handle}}-{{forloop.index | handle}}" data-toggle="collapse" aria-expanded="false" class="d-flex justify-content-between align-items-center crote"><p>{{ childlink.title }}</p>   <div class="mobile-menu-arrow">{% include 'svgarrow_down' %}</div> </a>
+
+                                <ul class="collapse list-unstyled" id="{{ childlink.title | handle}}-{{forloop.index | handle}}">
+
+                                  {% for grand_child_link in linklists[grand_child_link_handle].links %}
+                                  
+                                    <li>
+                                        <a href="{{ grand_child_link.url }}">{{ grand_child_link.title }}</a>
+                                    </li>            
+                                        
+                                  {% endfor %}
+                                </ul>
+                             
+                        </li>
+                        {% else %}
+                        
+                        <li>
+                            <a href="{{ childlink.url }}">{{ childlink.title }}</a>
+                        </li>
+                    {% endif %}
+                        {% comment %} child with submenu End {% endcomment %}
+
+
+
+                    {% endfor %}
+                    </ul>
                 </li>
-                <li>
-                    <a href="#">Home 2</a>
-                </li>
-                <li>
-                    <a href="#">Home 3</a>
-                </li>
-            </ul>
-        </li>
-        <li>
-         
+            {% else %}
+            <li><a href="{{link.url}}">{{ link.title }}</a></li>
+            {% endif %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+        {% comment %} <li>
             <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="d-flex justify-content-between align-items-center crote"><p>Pages</p>   <div class="mobile-menu-arrow">{% include 'svgarrow_down' %}</div> </a>
             <ul class="collapse list-unstyled" id="pageSubmenu">
                 <li>
@@ -40,10 +83,8 @@
         </li>
         <li>
             <a href="#">Portfolio</a>
-        </li>
-        <li>
-            <a href="#">Contact</a>
-        </li>
+        </li> {% endcomment %}
+     {%- endfor -%}
     </ul>
 
    <ul class="list-unstyled navigation">
@@ -62,7 +103,7 @@
 
 
 
-                  <li><a href="{{ routes.cart_url }}> {% include 'svgcart' %} </a></li>
+                  <li><a href="{{ routes.cart_url }}"> {% include 'svgcart' %} </a></li>
         </ul>
     </ul>
 </nav>
