--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -16,7 +16,7 @@
 
 {% render 'search-drawer' %}
 
-<div data-section-id="{{ section.id }}" data-section-type="header-section" data-header-section>
+<div data-section-id="{{ section.id }}" class="d-none" data-section-type="header-section" data-header-section>
   {% if section.settings.message %}
     {% if section.settings.home_page_only == false or request.page_type == 'index' %}
       <style>
@@ -267,85 +267,26 @@
 
 {% schema %}
 {
-  "name": "t:sections.header.name",
+  "name": "Mobile header",
   "settings": [
-    {
-      "type": "radio",
-      "id": "align_logo",
-      "label": "t:sections.header.settings.align_logo.label",
-      "default": "left",
-      "options": [
-        {
-          "value": "left",
-          "label": "t:sections.header.settings.align_logo.options__1.label"
-        },
-        {
-          "value": "center",
-          "label": "t:sections.header.settings.align_logo.options__2.label"
-        }
-      ]
-    },
-    {
-      "type": "image_picker",
-      "id": "logo",
-      "label": "t:sections.header.settings.logo.label"
-    },
-    {
-      "type": "range",
-      "id": "logo_max_width",
-      "label": "t:sections.header.settings.logo_max_width.label",
-      "min": 50,
-      "max": 250,
-      "step": 5,
-      "unit": "px",
-      "default": 100
-    },
+   
+
+
     {
       "type": "link_list",
       "id": "main_linklist",
       "label": "t:sections.header.settings.main_linklist.label",
       "default": "main-menu"
-    },
-    {
-      "type": "header",
-      "content": "t:sections.header.settings.header__1.content"
-    },
-    {
-      "type": "checkbox",
-      "id": "message",
-      "label": "t:sections.header.settings.message.label",
-      "default": false
-    },
-    {
-      "type": "checkbox",
-      "id": "home_page_only",
-      "label": "t:sections.header.settings.home_page_only.label",
-      "default": true
-    },
-    {
-      "type": "text",
-      "id": "message_text",
-      "label": "t:sections.header.settings.message_text.label",
-      "default": "Announce something here"
-    },
-    {
-      "type": "url",
-      "id": "message_link",
-      "label": "t:sections.header.settings.message_link.label",
-      "info": "t:sections.header.settings.message_link.info"
-    },
-    {
-      "type": "color",
-      "id": "color_bg",
-      "label": "t:sections.header.settings.color_bg.label",
-      "default": "#3a3a3a"
-    },
-    {
-      "type": "color",
-      "id": "color_text",
-      "label": "t:sections.header.settings.color_text.label",
-      "default": "#ffffff"
     }
+
+
+
+
+  
+   
   ]
 }
 {% endschema %}
+
+
+
