--- a/assets/style.css
+++ b/assets/style.css
@@ -517,6 +517,16 @@ header.site-header.border-bottom.logo--left {
   border-top: 1px solid #000;
 }
 
+.logo {
+  margin-right: 24px;
+  width: 143px;
+}
+@media (min-width: 768px) {
+  .logo {
+    margin-bottom: 0px;
+  }
+}
+
 .bannar-wrapper {
   background: rgb(242, 224, 133);
   position: relative;
