--- a/sections/customebannar.liquid
+++ b/sections/customebannar.liquid
@@ -14,7 +14,7 @@
          <div class="col-xl-6 col-md-12 p-0">
              <div class="bannar-left-image">
                <img src="data-sizes="auto"
-                data-src="{{ section.settings.img | img_url:'1024x1024' }}"
+                data-src="{{ section.settings.img | img_url:'master' }}"
                 data-srcset="{{ section.settings.img | img_url:'grande' }} 300w,
                 {{ section.settings.img | img_url:'2048 x 2048' }} 600w,
                 {{ section.settings.img | img_url:'master' }} 900w" class="lazyload" alt="">
